# rust-wasm-canvas-image-example

./: .gitignore  README.md  index.html  index.js  pkg_index_js.index.js
.github/workflows/: main.yml
.github/工作流/: main.yml
canvas-front/: .gitignore  package.json  webpack.config.js
canvas-front/server/: server.js
canvas-front/src/: index.js
canvas-front/static/: index.html
canvas-image-rs/: Cargo.toml  README.md  package.json  webpack.config.js
canvas-image-rs/public/: index.html  index.js
canvas-image-rs/src/: lib.rs
canvas-rs/: Cargo.toml  LICENSE_MIT
canvas-rs/src/: diagram.rs  lib.rs
docs/: index.html  index.js  index.js.map  pkg_index_js.index.js
